# ckan

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  store.rs  tmux.rs  ui.rs
tools/: ansi2svg.py  screenshots.sh
