[package]
name = "ckan"
version = "0.1.0"
edition = "2021"
description = "A terminal kanban board for the Claude Code sessions running across your tmux panes"
license = "MIT"
repository = "https://github.com/JavierAbrego/ckan"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
